# rocket-diesel-demo

./: .env  Cargo.toml  README.md  Rocket.toml
migrations/2022-04-04-093348_posts/: up.sql
src/: constants.rs  macros.rs  main.rs  schema.rs
src/api/: post_controller.rs
src/models/: mod.rs  post.rs  response.rs
src/services/: post_service.rs
