[package]
name = "rocket_diesel_demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
diesel = { version = "1.4", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_derive = { version = "1.0" }
diesel_migrations = { version = "1.4" }
log = { version = "0.4" }

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json", "diesel_postgres_pool"]